--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ body, html {
         <a href="#aureus"><i class="fas fa-bacterium"></i>    Staphylococcus aureus</i></a>
         <a href="#ileS"><i class="fas fa-bacterium"></i>    ileS</a>
         <a href="#mprF"><i class="fas fa-bacterium"></i>    mprF</a>
+        <a href="https://github.com/Laboratorios-Bioinformatica/Laboratorios-Bioinformatica.github.io" target="_blank"><i class="fab fa-github"></i>    Github</a>
       </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
   </div>
@@ -77,6 +78,7 @@ body, html {
         <li><b>Cell-PLoc 2.0 </b>: determinação a localização subcelular. <a href="http://www.cbs.dtu.dk/services/TargetP/" target="_blank" >"http://www.cbs.dtu.dk/services/TargetP/"</a></li> 
         <li><b>NetPhos - 3.1 </b>: determinação de quantos e quais locais genéricos de fosforilação. <a href="http://www.cbs.dtu.dk/services/NetPhos/" target="_blank" >"http://www.cbs.dtu.dk/services/NetPhos/"</a></li>
         <li><b>ClustalW</b>:  visualização de alinhamentos múltiplos de sequências. <a href="https://www.genome.jp/tools-bin/clustalw" target="_blank" >"https://www.genome.jp/tools-bin/clustalw"</a></li> 
+        <li><b><a href="https://github.com/Laboratorios-Bioinformatica/Laboratorios-Bioinformatica.github.io" target="_blank" >Github</b</a></li>
       </ul>
     </div>    
   </div>
@@ -289,7 +291,7 @@ body, html {
       </div>  
       <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
         <p class= "w3-center w3-large"><b> Cell-PLoc 2.0</b></p>
-        <img src="images/ppsD22.png" alt="Query ppsD" style="width:100%">
+        <img src="images/ileS.2.png" alt="Query ppsD" style="width:100%">
         <p>Encontra-se localizado no Citoplasma</p>
       </div>
       <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
@@ -300,7 +302,7 @@ body, html {
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" ></divclass>
       <h3 class= "w3-center w3-xlarge w3-margin-bottom" style = "margin-bottom: 150px;"><b> Árvore Filogenética</b></h3>
       <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:10%">
-        <img src="images/murA_phylo_tree.png" alt="murA-Árvore" style="width:100%">
+        <img src="images/ileS_phylo_tree.png" alt="murA-Árvore" style="width:100%">
       </div>
       <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
         <p> </p>
@@ -354,7 +356,7 @@ body, html {
   <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" ></divclass>
   <h3 class= "w3-center w3-xlarge w3-margin-bottom" style = "margin-bottom: 80px;"><b> Árvore Filogenética</b></h3>
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:10%">
-      <img src="images/murA_phylo_tree.png" alt="murA-Árvore" style="width:100%">
+      <img src="images/mprF_phylo_tree.png" alt="murA-Árvore" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
       <p> </p>
