--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ body, html {
   <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
     <p> </p>
     <p> Recorrendo à ferramenta blastp, obtemos o ficheiro fasta na base de dados Non-redundant protein sequences(nr) ficando com um ficheiro fasta com os alinhamentos com maior score. Estes ficheiro resultante do alinhamento foi utilizado no ClustalW para fazer o alinhamento multiplo de sequencias. Que de seguida foi iterado através do package Bio.Phylo do Biopython de modo analisarmos a filogenia do gene. </p>
+    <p>Observando a seguinte arvóre filogenética verifica-se que a espécie de interesse é aquela que se diverge mais do ancestral comum, ou seja, WP_122443940.1 </p>
   </div> 
 </div>
 
@@ -225,6 +226,7 @@ body, html {
       <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
         <p> </p>
         <p> Recorrendo à ferramenta blastp, obtemos o ficheiro fasta na base de dados Non-redundant protein sequences(nr) ficando com um ficheiro fasta com os alinhamentos com maior score. Estes ficheiro resultante do alinhamento foi utilizado no ClustalW para fazer o alinhamento multiplo de sequencias. Que de seguida foi iterado através do package Bio.Phylo do Biopython de modo analisarmos a filogenia do gene. </p>
+        <p>Observando a seguinte arvóre filogenética verifica-se que a espécie de interesse é aquela que se diverge mais do ancestral comum, ou seja, WP_031696609.1 </p>
       </div> 
     </div>
   </div>
@@ -307,6 +309,7 @@ body, html {
       <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
         <p> </p>
         <p> Recorrendo à ferramenta blastp, obtemos o ficheiro fasta na base de dados Non-redundant protein sequences(nr) ficando com um ficheiro fasta com os alinhamentos com maior score. Estes ficheiro resultante do alinhamento foi utilizado no ClustalW para fazer o alinhamento multiplo de sequencias. Que de seguida foi iterado através do package Bio.Phylo do Biopython de modo analisarmos a filogenia do gene. </p>
+        <p>Observando a seguinte arvóre filogenética verifica-se que a espécie de interesse é aquela que se diverge mais do ancestral comum, ou seja, WP_117206703.1 </p>
       </div>
   </div>  
 </div>
@@ -361,6 +364,7 @@ body, html {
     <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
       <p> </p>
       <p> Recorrendo à ferramenta blastp, obtemos o ficheiro fasta na base de dados Non-redundant protein sequences(nr) ficando com um ficheiro fasta com os alinhamentos com maior score. Estes ficheiro resultante do alinhamento foi utilizado no ClustalW para fazer o alinhamento multiplo de sequencias. Que de seguida foi iterado através do package Bio.Phylo do Biopython de modo analisarmos a filogenia do gene. </p>
+      <p>Observando a seguinte arvóre filogenética verifica-se que a espécie de interesse é aquela que se diverge mais do ancestral comum, ou seja, WP_16033544.1 </p>
     </div>
   </div> 
 </div>
