--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body, html {
         <a href="#tuber"><i class="fas fa-bacterium"></i>    Mycobacterium tuberculosis</a>
         <a href="#mura"><i class="fas fa-bacterium"></i>    murA</a>
         <a href="#ppsd"><i class="fas fa-bacterium"></i>    ppsD</a>
-        <a href="#aureus"><i class="fas fa-bacterium"></i>    Staphylococcus aureus</i></a>
+        <a href="#aureus"><i class="fas fa-bacterium"><i>    Staphylococcus aureus</i></a>
         <a href="#ileS"><i class="fas fa-bacterium"></i>    ileS</a>
         <a href="#mprF"><i class="fas fa-bacterium"></i>    mprF</a>
         <a href="https://github.com/Laboratorios-Bioinformatica/Laboratorios-Bioinformatica.github.io" target="_blank"><i class="fab fa-github"></i>    Github</a>
