--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@ body, html {
     <div class="w3-col l4 m9" style="margin-left:5%">
       <b class="w3-xlarge">Características da bactéria</b>
       <p> <i>Staphylococcus aureus (S. aureus)</i> é uma bactéria esférica gram-positiva, da família Micrococcaceae, responsável por várias infeções locais e sistémicas em seres humanos. Estas bactérias possuem aproximadamente um diâmetro de 0,5 a 1,5 µm e são caracterizadas pela forma de cocos, falta de mobilidade e por serem não-esporuladas.</h4> 
-      <p> Os seres humanos são um reservatório natural de S. aureus e estima-se que cerca de 30% a 50% da população adulta saudável se encontre infetada, dos quais 10% a 20% são infetados de forma persistente.</p>   
-      <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de cepas resistentes. Atualmente, a mupirocina é o antibiótico usado contra a S. aureus e MDR (resistente à meticilina). </p>
+      <p> Os seres humanos são um reservatório natural de <i>S. aureus</i> e estima-se que cerca de 30% a 50% da população adulta saudável se encontre infetada, dos quais 10% a 20% são infetados de forma persistente.</p>   
+      <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de estirpes resistentes. Atualmente, a mupirocina é o antibiótico usado contra a <i>S. aureus</i> e MDR (resistente à meticilina). </p>
     </div>
   </div>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
